# team1912-stats-wizard

./: Cargo.toml  README.md  package-lock.json
.github/workflows/: rust.yml  tba-api.yml
src/: cli.rs  main.rs  robot.rs  updater.rs  web.rs
tba-api/: Cargo.toml
tba-api/.openapi-generator/: FILES
tba-api/docs/: DefaultApi.md  DistrictApi.md  EventApi.md  InsightApi.md  MatchScoreBreakdown2016Alliance.md  NotablesInsight.md  NotablesInsightData.md  SearchIndex.md  SearchIndexEventsInner.md  SearchIndexTeamsInner.md  TeamApi.md  TeamEventStatusPlayoff.md
tba-api/src/apis/: configuration.rs  district_api.rs  event_api.rs  insight_api.rs  match_api.rs  mod.rs  tba_api.rs  team_api.rs
tba-api/src/models/: api_status.rs  award_recipient.rs  district_list.rs  district_ranking.rs  district_ranking_event_points_inner.rs  elimination_alliance.rs  elimination_alliance_status.rs  event.rs  event_district_points.rs  event_district_points_points_value.rs  event_district_points_tiebreakers_value.rs  event_insights.rs  event_insights_2016.rs  event_insights_2017.rs  event_insights_2018.rs  event_oprs.rs  event_ranking.rs  event_ranking_extra_stats_info_inner.rs  event_ranking_rankings_inner.rs  event_simple.rs  get_status_401_response.rs  get_team_events_statuses_by_year_200_response_value.rs  history.rs  leaderboard_insight.rs  leaderboard_insight_data.rs  match_score_breakdown_2018.rs  match_score_breakdown_2018_alliance.rs  match_score_breakdown_2019.rs  match_score_breakdown_2019_alliance.rs  match_score_breakdown_2020_alliance.rs  match_score_breakdown_2022.rs  (+25 more)
