[package]
name = "team1912-stats-wizard"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
dialoguer = {version = "0.11.0", features = ["editor", "completion"]}
dotenv = "0.15.0"
ftp = "3.0.1"
polars = "0.46.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = "1.43.0"
openapi = { git = "https://github.com/EthanPinson/tba-api-client-rust.git", branch = "read-api" }